--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,38 +1,38 @@
-  <div id="realizacao" class="row">
+  <div id="realizacao" class="row" data-aos="fade-up">
     <h2> Realização </h2>
     <figure class="columns">
       <a href="https://www.ceavi.udesc.br"><img src="{{site.urlimg}}logo-udesc-altovale.jpg" alt="Logo da Universidade do Estado de Santa Catarina"></a>
     </figure>
    </div>
 
- <div id="apoio" class="row">
+<div id="apoio" class="row" data-aos="zoom-in">
     <h2> Apoio </h2>
     <div class="small-6 large-centered columns">
       <a href="https://fapesc.sc.gov.br/"><img src="{{site.urlimg}}logo-fapesc.png" alt="Logo da FAPESC"/></a>
     </div>
   </div>
 
-  <div id="diamante" class="row">
+<div id="diamante" class="row" data-aos="fade-right">
     <h2> Parceiro Diamante</h2>
     <div class="small-6 large-centered columns">
       <a href="https://www.panoramasistemas.com.br/"><img src="{{site.urlimg}}logo-panorama-sistemas.png" alt="Logo da Panorama Sistemas"/></a>
     </div>
   </div>
-  <div id="prata" class="row">
+<div id="prata" class="row" data-aos="fade-left">
     <h2> Parceiro Prata</h2>
     <div class="small-6 large-centered columns">
       <a href="https://nxfacil.com.br/"><img src="{{site.urlimg}}logo-nxfacil.png" alt="Logo da nxfácil"/></a>
     </div>
   </div>
 
-    <div id="up-to-top" class="row">
+<div id="up-to-top" class="row" data-aos="fade-up">
       <div class="small-12 columns" style="text-align: right;">
         <a class="iconfont" href="#top-of-page">&#xf108;</a>
       </div><!-- /.small-12.columns -->
     </div><!-- /.row -->
 
 
-    <footer id="footer-content" class="bg-grau">
+    <footer id="footer-content" class="bg-grau" data-aos="fade-up">
       <div id="footer">
         <div class="row">
           <div class="medium-6 large-5 columns">
