--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,14 @@ layout: compress
             href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"
             rel="stylesheet"
         />
+        <link
+            rel="stylesheet"
+            href="{{ '/assets/css/palestras.css' | relative_url }}"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        />
     </head>
     <body id="top-of-page" class="{{ layout.format }}">
         {% unless page.skip_boilerplate %} {% include _navigation.html %} {%
@@ -20,31 +28,6 @@ layout: compress
         page.skip_boilerplate %} {% include _footer.html %} {% endunless %} {%
         include _footer_scripts.html %}
         <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-        <script>
-            document.addEventListener('DOMContentLoaded', function () {
-                const blocks = document.querySelectorAll(
-                    'article p, article h1, article h2, article h3, article ul, article li'
-                );
-
-                blocks.forEach((el, i) => {
-                    const tag = el.tagName.toLowerCase();
-
-                    // Animação diferenciada por tipo
-                    if (tag === 'h2') {
-                        el.setAttribute('data-aos', 'zoom-in');
-                        el.setAttribute('data-aos-delay', i * 50);
-                    } else {
-                        el.setAttribute('data-aos', 'fade-up');
-                        el.setAttribute('data-aos-delay', i * 50);
-                    }
-                });
-
-                // Inicializar AOS depois que todos data-aos foram adicionados
-                AOS.init({
-                    once: true,
-                    duration: 600,
-                });
-            });
-        </script>
+        <script src="{{ '/assets/js/animacoes.js' | relative_url }}"></script>
     </body>
 </html>
