feat: implementa estrutura de cards nos minicursos TODO: modularizar as estruturas para as tornar facilmente replicáveis

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@ layout: compress
         />
         <link
             rel="stylesheet"
-            href="{{ '/assets/css/palestras.css' | relative_url }}"
+            href="{{ '/assets/css/cards.css' | relative_url }}"
         />
         <link
             rel="stylesheet"
