refactor: modulariza a estrutura dos cards e das informacoes dos minicursos TODO: modularizar a mesma questão com as palestras

--- a/assets/css/cards.scss
+++ b/assets/css/cards.scss
@@ -1,6 +1,6 @@
 ---
 ---
-/*Arquivo .scss responsável pela estilização dos cards utilizados nas seções de palestras e minicursos*/
+/*Arquivo .scss responsável pela estilização dos cards utilizados nas seções de palestras, minicursos e programação*/
 
 .card {
   border: 1px solid #94A3B8;
