fix: corrige quebra nos cards em versões responsivas das telas

--- a/assets/css/cards.scss
+++ b/assets/css/cards.scss
@@ -103,7 +103,7 @@
 }
 
 .card.active .card-content {
-  max-height: 1000px;
+  max-height: 2000px;
   opacity: 1;
   padding: 1rem 1.5rem;
 }
@@ -175,7 +175,7 @@
     gap: 1rem;
   }
 
-  .cad-content .columns {
+  .card-content .columns {
     flex: 0 0 100%;
     max-width: 100%;
   }
