feat: adiciona animações nas laterais das páginas. Adiciona banner protótipo

--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -25,6 +25,10 @@ endcapture %} {% assign title = title | strip_html | escape | strip_newlines %}
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.0/css/font-awesome.min.css"
 />
+<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
 {% endif %}
 
 <script src="{{ url }}/assets/js/modernizr.min.js"></script>
