--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@ layout: compress
         />
         <link
             rel="stylesheet"
-            href="{{ '/assets/css/decor.css' | relative_url }}"
+            href="{{ '/assets/css/waves.css' | relative_url }}"
         />
         <link
             rel="stylesheet"
@@ -40,11 +40,11 @@ layout: compress
                     >
                         <stop
                             offset="0%"
-                            style="stop-color: #7b3ff2; stop-opacity: 0.45"
+                            style="stop-color: #ac43ed; stop-opacity: 0.8"
                         />
                         <stop
                             offset="100%"
-                            style="stop-color: #ffa94d; stop-opacity: 0.45"
+                            style="stop-color: #ff6a00; stop-opacity: 0.8"
                         />
                     </linearGradient>
                 </defs>
