feat: melhora as cores das ondas. Começa os ajustes para a versão definitiva do site

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,4 +1,4 @@
-  <div id="realizacao" class="row" data-aos="fade-up">
+ <div id="realizacao" class="row" data-aos="fade-up">
     <h2> Realização </h2>
     <figure class="columns">
       <a href="https://www.ceavi.udesc.br"><img src="{{site.urlimg}}logo-udesc-altovale.jpg" alt="Logo da Universidade do Estado de Santa Catarina"></a>
@@ -13,15 +13,15 @@
   </div>
 
 <div id="diamante" class="row" data-aos="fade-right">
-    <h2> Parceiro Diamante</h2>
+    <h2> Parceiro Diamante (A definir!)</h2>
     <div class="small-6 large-centered columns">
-      <a href="https://www.panoramasistemas.com.br/"><img src="{{site.urlimg}}logo-panorama-sistemas.png" alt="Logo da Panorama Sistemas"/></a>
+      <a href=""><img src=""/></a>
     </div>
   </div>
 <div id="prata" class="row" data-aos="fade-left">
-    <h2> Parceiro Prata</h2>
+    <h2> Parceiro Prata (A definir!)</h2>
     <div class="small-6 large-centered columns">
-      <a href="https://nxfacil.com.br/"><img src="{{site.urlimg}}logo-nxfacil.png" alt="Logo da nxfácil"/></a>
+      <a href=""><img src=""/></a>
     </div>
   </div>
 
