--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,11 +40,11 @@ layout: compress
                     >
                         <stop
                             offset="0%"
-                            style="stop-color: #ac43ed; stop-opacity: 0.8"
+                            style="stop-color: #4b0082; stop-opacity: 1"
                         />
                         <stop
                             offset="100%"
-                            style="stop-color: #ff6a00; stop-opacity: 0.8"
+                            style="stop-color: #ff4500; stop-opacity: 1"
                         />
                     </linearGradient>
                 </defs>
