feat: ajustes finais para primeira versão do site

--- a/_sass/_01_settings_colors.scss
+++ b/_sass/_01_settings_colors.scss
@@ -26,12 +26,12 @@ $body-bg            : #fdfdfd;
    https://color.adobe.com/de/Flat-Design-Colors-v2-color-theme-4341903/
 -------------------------------------------------------------------  */
 
-$ci-1: #270857; // Azul petróleo profundo (background principal)
-$ci-2: #1F0039; // Variação mais clara para menus
-$ci-3: #3B82F6; // Azul elétrico vibrante (acentos e links)
-$ci-4: #94A3B8; // Cinza-azul claro (texto secundário)
-$ci-5: #b912f6; // Azul-violeta criativo (botões ativos)
-$ci-6: #FF922B; // Roxo digital intenso (hover e destaques)
+$ci-1: #270857; 
+$ci-2: #1F0039; 
+$ci-3: #3B82F6; 
+$ci-4: #94A3B8; 
+$ci-5: #b912f6; 
+$ci-6: #f55200; 
 
 
 /* Foundation Color Variables
