fix: corrige links e outras questões visuais (curvas svg, remoção de fotos, adição de fotos novas). feat: adiciona nova palestra

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -6,16 +6,16 @@
    </div>
 
 <div id="apoio" class="row" data-aos="zoom-in">
-    <h2> Apoio </h2>
+    <h2> Apoio (A definir!) </h2>
     <div class="small-6 large-centered columns">
-      <a href="https://fapesc.sc.gov.br/"><img src="{{site.urlimg}}logo-fapesc.png" alt="Logo da FAPESC"/></a>
+      <a href=""><img src="" alt=""/></a>
     </div>
   </div>
 
 <div id="diamante" class="row" data-aos="fade-right">
-    <h2> Parceiro Diamante (A definir!)</h2>
+    <h2> Parceiro Diamante</h2>
     <div class="small-6 large-centered columns">
-      <a href=""><img src=""/></a>
+      <a href="https://www.ipm.com.br/"> <img src="{{ site.urlimg }}logo_IPM.png" alt="Logo da IPM Sistemas" style="max-width: 240px;"/></a>
     </div>
   </div>
 <div id="prata" class="row" data-aos="fade-left">
