--- a/assets/css/cards.scss
+++ b/assets/css/cards.scss
@@ -132,7 +132,7 @@
 .card.tema-panorama         { border-left: 5px solid #3B82F6; }
 .card.tema-industriadejogos { border-left: 5px solid #1F0039; }
 .card.tema-mercado         { border-left: 5px solid #00B894; }
-.card.tema-sma              { border-left: 5px solid #6366F1; }
+.card.tema-engenharia_software { border-left: 5px solid #6366F1; }
 .card.tema-industria        { border-left: 5px solid #270857; }
 .card.tema-valerinas        { border-left: 5px solid #EC4899; }
 .card.tema-encerramento     { border-left: 5px solid #AC43ED; }
