--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -5,23 +5,23 @@
     </figure>
    </div>
 
-<div id="apoio" class="row" data-aos="zoom-in">
-    <h2> Apoio (A definir!) </h2>
-    <div class="small-6 large-centered columns">
-      <a href=""><img src="" alt=""/></a>
-    </div>
-  </div>
-
 <div id="diamante" class="row" data-aos="fade-right">
     <h2> Parceiro Diamante</h2>
     <div class="small-6 large-centered columns">
       <a href="https://www.ipm.com.br/"> <img src="{{ site.urlimg }}logo_IPM.png" alt="Logo da IPM Sistemas" style="max-width: 240px;"/></a>
     </div>
   </div>
-<div id="prata" class="row" data-aos="fade-left">
-    <h2> Parceiro Prata (A definir!)</h2>
+  <div id="Platina" class="row" data-aos="fade-right">
+    <h2> Parceiro Platina</h2>
     <div class="small-6 large-centered columns">
-      <a href=""><img src=""/></a>
+      <a href="https://www.panoramasistemas.com.br/"> <img src="{{ site.urlimg }}logo_panorama.png" alt="Logo da Panorama Sistemas" style="max-width: 240px;"/></a>
+      <a href="https://pontogovsistemas.com.br/"> <img src="{{ site.urlimg }}logo_pontogov.png" alt="Logo da PontoGov Sistemas" style="max-width: 240px;"/></a>
+    </div>
+  </div>
+<div id="prata" class="row" data-aos="fade-left">
+    <h2> Parceiro Prata</h2>
+    <div class="small-6 large-centered columns">
+      <a href="https://www.nxfacil.com.br/"><img src="{{ site.urlimg }}logo_NxFacil.png" alt="Logo da NxFácil"/></a>
     </div>
   </div>
 
