feat: adiciona novo design para a tela da organização do evento cria a palestra sobre a DARA

--- a/assets/css/cards.scss
+++ b/assets/css/cards.scss
@@ -131,7 +131,7 @@
 .card.tema-abertura         { border-left: 5px solid #AC43ED; }
 .card.tema-panorama         { border-left: 5px solid #3B82F6; }
 .card.tema-industriadejogos { border-left: 5px solid #1F0039; }
-.card.tema-mercado         { border-left: 5px solid #00B894; }
+.card.tema-dara        { border-left: 5px solid #00B894; }
 .card.tema-engenharia_software { border-left: 5px solid #6366F1; }
 .card.tema-industria        { border-left: 5px solid #270857; }
 .card.tema-valerinas        { border-left: 5px solid #EC4899; }
