--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -88,7 +88,6 @@
   #Platina .columns img{
     max-height: 80px;
   }
-  /* PontoGov menor no mobile */
   #Platina img[alt="Logo da PontoGov Sistemas"] {
     max-height: 60px;
   }
@@ -131,6 +130,9 @@
   <div class="small-12 columns">
     <a href="https://www.nxfacil.com.br/">
       <img src="{{ site.urlimg }}logo_NxFacil.png" alt="Logo da NxFácil">
+    </a>
+    <a href="https://effecti.com.br/">
+      <img src="{{ site.urlimg }}logo_effecti.png" alt="Logo da Effecti">
     </a>
   </div>
 </div>
