--- a/assets/css/cards.scss
+++ b/assets/css/cards.scss
@@ -129,7 +129,7 @@
 
 /*PALESTRAS -> Temas*/
 .card.tema-abertura         { border-left: 5px solid #AC43ED; }
-.card.tema-panorama         { border-left: 5px solid #3B82F6; }
+.card.tema-sic         { border-left: 5px solid #3B82F6; }
 .card.tema-industriadejogos { border-left: 5px solid #1F0039; }
 .card.tema-dara        { border-left: 5px solid #00B894; }
 .card.tema-engenharia_software { border-left: 5px solid #6366F1; }
