chore: atualiza regras da gamificação e algumas bios

--- a/assets/css/cards.scss
+++ b/assets/css/cards.scss
@@ -130,7 +130,7 @@
 /*PALESTRAS -> Temas*/
 .card.tema-dara        { border-left: 5px solid #00B894; }
 .card.tema-engenharia_software { border-left: 5px solid #6366F1; }
-.card.tema-painel     { border-left: 5px solid #AC43ED; }
+.card.tema-mercado     { border-left: 5px solid #AC43ED; }
 
 /*MINICURSOS -> Temas*/
 .card.tema-comunicacao   { border-left: 5px solid #ff0084; } 
